--- a/app/elements/login-button/login-button.html
+++ b/app/elements/login-button/login-button.html
@@ -14,6 +14,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style>
       :host {
         display: block;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
       }
 
       .first-button {
@@ -25,10 +28,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
     <paper-material>
-    
-    <paper-ripple center></paper-ripple>
       <div>
-        Hello from <span>{{fart}}</span>
+        Hello from <button id=“click-me” on-click="handleClick">{{fart}}</button>
       </div>
       </paper-material>
 
@@ -37,14 +38,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   (function() {
     'use strict';
 
-    Polymer({
+   new Polymer({
       is: 'login-button',
+
+      handleClick: function() {
+        console.log('gonna pass strava oauth');
+      },
+
+      ready: function(){
+        this.textContext = 'Did i show up?';
+        console.log('hey');
+      },
 
       properties: {
         fart: {
           type: String,
           value: 'Hey Log in',
-          notify: true
+          notify: true,
         }
       }
     });
